# kubo

./: Cargo.toml  README.md  RELEASE.md  install.sh
.claude/: CLAUDE.md  settings.local.json
.claude/agents/: code-quality-reviewer.md  correctness-reviewer.md  dockerfile-reviewer.md  security-reviewer.md
.claude/commands/: consult.md  review.md  ship-it.md  test.md
.claude/hooks/: katulong-pubsub.sh
.claude/skills/consult/: SKILL.md
.claude/skills/dispatch/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/ship-it/: SKILL.md
.claude/skills/triage/: SKILL.md
.claude/skills/work/: SKILL.md
.github/workflows/: ci.yml  homebrew.yml  release.yml
.husky/: pre-commit  pre-push
crates/kubo-cli/: Cargo.toml
crates/kubo-cli/src/: main.rs
crates/kubo-core/: Cargo.toml  build.rs
crates/kubo-core/src/: catalog.rs  chain.rs  claude.rs  container.rs  error.rs  generator.rs  image.rs  intent.rs  lib.rs  stage.rs
crates/kubo-core/tests/: image_tools.rs
crates/kubo-web/: Cargo.toml
crates/kubo-web/src/: lib.rs
image/: Dockerfile  clip  entrypoint.sh  kubo.zsh-theme  pbcopy  pbpaste  tmux.conf  vimrc  welcome.sh  zshrc
scripts/: refresh.sh  release.sh
