[package]
license.workspace = true
name = "kubo-cli"
version.workspace = true
edition.workspace = true
description = "CLI for kubo: isolated dev environments in Docker"

[[bin]]
name = "kubo"
path = "src/main.rs"

[dependencies]
kubo-core = { path = "../kubo-core" }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
