[package]
name = "kubo-core"
version.workspace = true
edition.workspace = true
description = "Core types for kubo: action chains, pipeline generation, intent parsing"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
ureq = { version = "3", features = ["json"] }

[dev-dependencies]
tempfile = "3"
